fixed bug where thumb was not showing in slider for value 0

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,10 @@
   background-color: #93d0CC;
 }
 
+.mat-slider .mat-accent .mat-slider-thumb-container .mat-slider-min-value .mat-slider-thumb {
+  background: red;
+}
+
 .mat-accent .mat-slider-thumb {
   height: 25px;
   width: 25px;
@@ -30,6 +34,11 @@
 .mat-slider-min-value:not(.mat-slider-thumb-label-showing) .mat-slider-thumb {
   background-color: #80BAB1;
 }
+
+.mat-slider-min-value .mat-slider-thumb-container .mat-slider-thumb {
+  background-color: #80BAB1;
+}
+
 .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
   background-color: #93d0CC !important;
   border-color: 1px solid #93d0CC;
